--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_buckets.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_buckets.yml
@@ -23,6 +23,7 @@ setup:
             "job_id": "jobs-get-result-buckets",
             "result_type": "bucket",
             "timestamp": "2016-06-01T00:00:00Z",
+            "anomaly_score": 90.0,
             "bucket_span":1
           }
 
@@ -30,14 +31,28 @@ setup:
       index:
         index:  .ml-anomalies-jobs-get-result-buckets
         type:   result
-        id:     "jobs-get-result-buckets_1464739200000_2"
+        id:     "jobs-get-result-buckets_1470009600000_2"
         body:
           {
             "job_id": "jobs-get-result-buckets",
             "result_type": "bucket",
             "timestamp": "2016-08-01T00:00:00Z",
+            "anomaly_score": 60.0,
             "bucket_span":1,
             "is_interim": true
+          }
+  - do:
+      index:
+        index:  .ml-anomalies-jobs-get-result-buckets
+        type:   result
+        id:     "jobs-get-result-buckets_1470096000000_3"
+        body:
+          {
+            "job_id": "jobs-get-result-buckets",
+            "result_type": "bucket",
+            "timestamp": "2016-08-02T00:00:00Z",
+            "anomaly_score": 60.0,
+            "bucket_span":1,
           }
 
   - do:
@@ -63,15 +78,19 @@ setup:
       xpack.ml.get_buckets:
         job_id: "jobs-get-result-buckets"
 
-  - match: { count: 2 }
+  - match: { count: 3 }
   - match: { buckets.0.timestamp: 1464739200000 }
   - match: { buckets.0.job_id: jobs-get-result-buckets}
   - match: { buckets.0.result_type: bucket}
   - match: { buckets.1.timestamp: 1470009600000 }
   - match: { buckets.1.job_id: jobs-get-result-buckets}
   - match: { buckets.1.result_type: bucket}
+  - match: { buckets.2.timestamp: 1470096000000 }
+  - match: { buckets.2.job_id: jobs-get-result-buckets}
+  - match: { buckets.2.result_type: bucket}
   - is_false: buckets.0.partition_scores
   - is_false: buckets.1.partition_scores
+  - is_false: buckets.2.partition_scores
 
 ---
 "Test get buckets given exclude_interim is false":
@@ -80,7 +99,7 @@ setup:
         job_id: "jobs-get-result-buckets"
         exclude_interim: false
 
-  - match: { count: 2 }
+  - match: { count: 3 }
 
 ---
 "Test get buckets given exclude_interim is true":
@@ -89,9 +108,11 @@ setup:
         job_id: "jobs-get-result-buckets"
         exclude_interim: true
 
-  - match: { count: 1 }
+  - match: { count: 2 }
   - match: { buckets.0.timestamp: 1464739200000 }
   - match: { buckets.0.is_interim: false }
+  - match: { buckets.1.timestamp: 1470096000000 }
+  - match: { buckets.1.is_interim: false }
 
 ---
 "Test result single bucket api":
@@ -189,3 +210,33 @@ setup:
       catch: missing
       xpack.ml.get_buckets:
         job_id: "non-existent-job"
+
+---
+"Test get buckets with sort field and secondary sort by time":
+  - do:
+      xpack.ml.get_buckets:
+        job_id: "jobs-get-result-buckets"
+        sort: anomaly_score
+
+  - match: { count: 3 }
+  - match: { buckets.0.anomaly_score: 60.0 }
+  - match: { buckets.0.timestamp: 1470009600000 }
+  - match: { buckets.1.anomaly_score: 60.0 }
+  - match: { buckets.1.timestamp: 1470096000000 }
+  - match: { buckets.2.anomaly_score: 90.0}
+  - match: { buckets.2.timestamp: 1464739200000 }
+
+  - do:
+      xpack.ml.get_buckets:
+        job_id: "jobs-get-result-buckets"
+        sort: anomaly_score
+        desc: true
+
+  - match: { count: 3 }
+  - match: { buckets.0.anomaly_score: 90.0 }
+  - match: { buckets.0.timestamp: 1464739200000 }
+  - match: { buckets.1.anomaly_score: 60.0}
+  - match: { buckets.1.timestamp: 1470096000000 }
+  - match: { buckets.2.anomaly_score: 60.0}
+  - match: { buckets.2.timestamp: 1470009600000 }
+
