--- a/qa/smoke-test-ml-with-security/build.gradle
+++ b/qa/smoke-test-ml-with-security/build.gradle
@@ -24,7 +24,7 @@ integTestRunner {
     'ml/delete_model_snapshot/Test delete snapshot missing snapshotId',
     'ml/delete_model_snapshot/Test delete snapshot missing job_id',
     'ml/delete_model_snapshot/Test delete with in-use model',
-    'ml/filter_crud/Test create filter api without ID',
+    'ml/filter_crud/Test create filter api with mismatching body ID',
     'ml/filter_crud/Test get filter API with bad ID',
     'ml/filter_crud/Test invalid param combinations',
     'ml/filter_crud/Test non-existing filter',
