[ML] Change result index searches to not use _type (elastic/x-pack-elasticsearch#1509)
Adjusts the searches for

- buckets
- categories
- model snapshots

to not use _type.

Relates elastic/x-pack-elasticsearch#668

Original commit: elastic/x-pack-elasticsearch@82696097050908db9a755f1b0727f97e123a4b61

--- a/plugin/src/test/resources/rest-api-spec/test/ml/delete_model_snapshot.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/delete_model_snapshot.yml
@@ -73,7 +73,8 @@ setup:
             "snapshot_id": "active-snapshot",
             "description": "second",
             "latest_record_time_stamp": "2016-06-01T00:00:00Z",
-            "latest_result_time_stamp": "2016-06-01T00:00:00Z"
+            "latest_result_time_stamp": "2016-06-01T00:00:00Z",
+            "snapshot_doc_count": 3
           }
 
   - do:
