[ML] Wait for a stopping datafeed (elastic/x-pack-elasticsearch#1461)
* [ML] Wait for a stopping datafeed

* Fix compilation after rebase

* Address review comments

Original commit: elastic/x-pack-elasticsearch@2baed641e965d80b8516541cc26d31411ec4de81

--- a/plugin/src/test/resources/rest-api-spec/test/ml/start_stop_datafeed.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/start_stop_datafeed.yml
@@ -144,13 +144,12 @@ setup:
           datafeed_id: "non-existing-datafeed"
 
 ---
-"Test stop already stopped datafeed job":
+"Test stop already stopped datafeed job is not an error":
   - do:
-      catch: conflict
       xpack.ml.stop_datafeed:
         datafeed_id: "start-stop-datafeed-datafeed-1"
+
   - do:
-      catch: /Cannot stop datafeed \[start-stop-datafeed-datafeed-1\] because it has already been stopped/
       xpack.ml.stop_datafeed:
         datafeed_id: "start-stop-datafeed-datafeed-1"
 
