--- a/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/old_cluster/20_security.yml
+++ b/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/old_cluster/20_security.yml
@@ -60,6 +60,9 @@
 
 ---
 "default password migration":
+  - skip:
+      version: "5.0.0 - "
+      reason: https://github.com/elastic/x-pack-elasticsearch/issues/1523
   # Check that enabling a user in old cluster will not prevent the user from having a "default password" in the new cluster.
   # See: org.elasticsearch.xpack.security.authc.esnative.NativeRealmMigrator.doConvertDefaultPasswords
   - do:
