Mark default password migration test as skipped
This test fails reliably, so this commit marks the test as awaits fix.

Original commit: elastic/x-pack-elasticsearch@8eb8b732ba82c94a442ce543977fb6c87a4ceb5d

--- a/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/mixed_cluster/20_security.yml
+++ b/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/mixed_cluster/20_security.yml
@@ -32,6 +32,9 @@
 
 ---
 "verify users for default password migration in mixed cluster":
+  - skip:
+      version: "5.0.0 - "
+      reason: https://github.com/elastic/x-pack-elasticsearch/issues/1516
   - do:
       xpack.security.get_user:
         username: "kibana,logstash_system"
