Mark verify Kibana user works as skipped
This test fails reliably, so we mark it as skipped.

Original commit: elastic/x-pack-elasticsearch@4fc8a6883e01f9ea691baed368d25b628e6752c1

--- a/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/mixed_cluster/30_kibana_write.yml
+++ b/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/mixed_cluster/30_kibana_write.yml
@@ -40,6 +40,9 @@ teardown:
         realms: "_all"
 ---
 "Verify kibana user role works in mixed cluster":
+  - skip:
+      version: "5.0.0 - "
+      reason: https://github.com/elastic/x-pack-elasticsearch/issues/1527
   - do:
       headers:
         Authorization: "Basic a2liYW5hOmNoYW5nZW1l"
