--- a/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/upgraded_cluster/20_security.yml
+++ b/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/upgraded_cluster/20_security.yml
@@ -1,5 +1,8 @@
 ---
 "Verify user and role in upgraded cluster":
+  - skip:
+      version: "5.0.0 - "
+      reason: https://github.com/elastic/x-pack-elasticsearch/issues/1529
   - do:
       headers:
         Authorization: "Basic bmF0aXZlX3VzZXI6Y2hhbmdlbWU="
