Fix rolling upgrade test dependency
The rolling upgrade nodes need a keystore for SSL configuration but
there was no dependency on the task that copies the keystore into the
output directory for the nodes to pick up as an extra configuration
file. This commit addresses this by adding such a dependency. To do
this, we need to break the dependency of the keystore copy task on the
REST spec copy task; this is not an issue since the dependency was for
convenience of ordering the task and not actually needed.

Original commit: elastic/x-pack-elasticsearch@fddbc06e9ffc0df0eeda67f2d547ef71e52f7d80

--- a/qa/rolling-upgrade/build.gradle
+++ b/qa/rolling-upgrade/build.gradle
@@ -57,6 +57,12 @@ task bwcTest {
   group = 'verification'
 }
 
+task copyTestNodeKeystore(type: Copy) {
+    from project(':x-pack-elasticsearch:plugin')
+            .file('src/test/resources/org/elasticsearch/xpack/security/transport/ssl/certs/simple/testnode.jks')
+    into outputDir
+}
+
 for (Version version : wireCompatVersions) {
   String baseName = "v${version}"
 
@@ -66,6 +72,7 @@ for (Version version : wireCompatVersions) {
 
   Object extension = extensions.findByName("${baseName}#oldClusterTestCluster")
   configure(extensions.findByName("${baseName}#oldClusterTestCluster")) {
+    dependsOn copyTestNodeKeystore
     plugin ':x-pack-elasticsearch:plugin'
     distribution = 'zip'
     bwcVersion = version
@@ -168,15 +175,8 @@ task copyXPackRestSpec(type: Copy) {
     into project.sourceSets.test.output.resourcesDir
 }
 
-task copyTestNodeKeystore(type: Copy) {
-    dependsOn(copyXPackRestSpec)
-    from project(':x-pack-elasticsearch:plugin')
-            .file('src/test/resources/org/elasticsearch/xpack/security/transport/ssl/certs/simple/testnode.jks')
-    into outputDir
-}
-
 task copyXPackPluginProps(type: Copy) {
-    dependsOn(copyTestNodeKeystore)
+    dependsOn(copyXPackRestSpec)
     from project(':x-pack-elasticsearch:plugin').file('src/main/plugin-metadata')
     from project(':x-pack-elasticsearch:plugin').tasks.pluginProperties
     into outputDir
