[ML] Use unique and predictable IDs for result docs (elastic/x-pack-elasticsearch#1521)
* Remove sequenceNum from anomaly records and influencers

* Generate unqiue IDs without sequence numbers

* Remove more instances of sequence_num

* Handle parsing sequnce_num from v5.4

Original commit: elastic/x-pack-elasticsearch@e60b206daf20b5a1bf562d2455f680e0f3a274b0

--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_influencers.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_influencers.yml
@@ -26,8 +26,7 @@ setup:
             "influencer_field_value": "bar",
             "influencer_score": 50.0,
             "result_type" : "influencer",
-            "bucket_span" : 1,
-            "sequence_num" : 1
+            "bucket_span" : 1
           }
 
   - do:
@@ -44,7 +43,6 @@ setup:
             "influencer_score": 80.0,
             "result_type" : "influencer",
             "bucket_span" : 1,
-            "sequence_num" : 2,
             "is_interim": true
           }
 
@@ -61,8 +59,7 @@ setup:
             "influencer_field_value": "zoo",
             "influencer_score": 60.0,
             "result_type" : "influencer",
-            "bucket_span" : 1,
-            "sequence_num" : 2
+            "bucket_span" : 1
           }
 
   - do:
