[ML] Single doc type for results index (elastic/x-pack-elasticsearch#1528)
This commit changes all results to use the single doc type.
All searches were adjusted to work without the need to specify
type which ensures BWC with 5.4 results.

Additional work is needed to put the new doc mapping in indices
created with 5.4 but it will be done in separate PR.

Relates elastic/x-pack-elasticsearch#668

Original commit: elastic/x-pack-elasticsearch@041c88ac2d4e7beca11d4f2b1c13fd7fe2d64699

--- a/plugin/src/test/resources/rest-api-spec/test/ml/delete_model_snapshot.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/delete_model_snapshot.yml
@@ -28,7 +28,7 @@ setup:
   - do:
       index:
         index:  .ml-anomalies-delete-model-snapshot
-        type:   model_snapshot
+        type:   doc
         id:     "delete-model-snapshot_model_snapshot_inactive-snapshot"
         body: >
           {
@@ -64,7 +64,7 @@ setup:
   - do:
       index:
         index:  .ml-anomalies-delete-model-snapshot
-        type:   model_snapshot
+        type:   doc
         id:     "delete-model-snapshot_model_snapshot_active-snapshot"
         body: >
           {
