--- a/plugin/src/test/resources/rest-api-spec/test/ml/filter_crud.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/filter_crud.yml
@@ -5,7 +5,7 @@ setup:
       index:
         index: .ml-meta
         type: doc
-        id: imposter-filter
+        id: filter_imposter-filter
         body: >
           {
             "filter_id": "imposter",
