--- a/plugin/src/test/resources/rest-api-spec/test/ml/post_data.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/post_data.yml
@@ -80,7 +80,7 @@ setup:
   - do:
       get:
         index: .ml-anomalies-post-data-job
-        type: data_counts
+        type: doc
         id: post-data-job_data_counts
 
   - match: { _source.processed_record_count: 2 }
