[ML] Handle requests with source (elastic/x-pack-elasticsearch#1553)
REST endpoints that support GET and POST need
to also support source parsing. As these
endpoints can accept a body but some clients
do not allow doing a GET with a request body,
elasticsearch has support for parsing via a
source URI parameter. This commit adds source
handling to all such endpoints.

relates elastic/x-pack-elasticsearch#1204

Original commit: elastic/x-pack-elasticsearch@3949ea31fe087faf0c867b08f9e37dc91f51c83a

--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_buckets.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_buckets.yml
@@ -93,6 +93,41 @@ setup:
   - is_false: buckets.2.partition_scores
 
 ---
+"Test get buckets with paging":
+  - do:
+      xpack.ml.get_buckets:
+        job_id: "jobs-get-result-buckets"
+        from: 1
+        size: 2
+
+  - match: { count: 3 }
+  - length: { buckets: 2 }
+  - match: { buckets.0.timestamp: 1470009600000 }
+  - match: { buckets.0.result_type: bucket}
+  - match: { buckets.1.timestamp: 1470096000000 }
+  - match: { buckets.1.result_type: bucket}
+
+---
+"Test get buckets with paging in body":
+  - do:
+      xpack.ml.get_buckets:
+        job_id: "jobs-get-result-buckets"
+        body:  >
+          {
+            "page": {
+              "from": 1,
+              "size": 2
+            }
+          }
+
+  - match: { count: 3 }
+  - length: { buckets: 2 }
+  - match: { buckets.0.timestamp: 1470009600000 }
+  - match: { buckets.0.result_type: bucket}
+  - match: { buckets.1.timestamp: 1470096000000 }
+  - match: { buckets.1.result_type: bucket}
+
+---
 "Test get buckets given exclude_interim is false":
   - do:
       xpack.ml.get_buckets:
