--- a/qa/smoke-test-watcher-with-mustache/src/test/resources/rest-api-spec/test/watcher_mustache/20_array_access.yml
+++ b/qa/smoke-test-watcher-with-mustache/src/test/resources/rest-api-spec/test/watcher_mustache/20_array_access.yml
@@ -5,50 +5,38 @@
           wait_for_status: yellow
 
   - do:
-      xpack.watcher.put_watch:
-        id: "test_watch"
+      xpack.watcher.execute_watch:
         body:  >
           {
-            "trigger": {
-              "schedule": {
-                "interval": "1s"
-              }
-            },
-            "input": {
-              "simple" : {
-                "objects" : [
-                  {
-                    "field": "value1"
-                  },
-                  {
-                    "field": "value2"
+            "watch": {
+              "trigger": {
+                "schedule": {
+                  "interval": "1s"
+                }
+              },
+              "input": {
+                "simple" : {
+                  "objects" : [
+                    {
+                      "field": "value1"
+                    },
+                    {
+                      "field": "value2"
+                    }
+                  ]
+                }
+              },
+              "condition": {
+                "always" : {}
+              },
+              "actions": {
+                "output": {
+                  "logging" : {
+                    "text" : "{{ctx.payload.objects.0.field}} {{ctx.payload.objects.1.field}}"
                   }
-                ]
-              }
-            },
-            "condition": {
-              "always" : {}
-            },
-            "actions": {
-              "output": {
-                "logging" : {
-                  "text" : "{{ctx.payload.objects.0.field}} {{ctx.payload.objects.1.field}}"
                 }
               }
             }
           }
-  - match: { _id: "test_watch" }
-  - match: { created: true }
 
-  # Simulate a Thread.sleep()
-  - do:
-      catch: request_timeout
-      cluster.health:
-        wait_for_nodes: 99
-        timeout: 5s
-  - match: { "timed_out": true }
-
-  - do:
-      search:
-        index: .watcher-history-*
-  - match: { hits.hits.0._source.result.actions.0.logging.logged_text: "value1 value2" }
+  - match: { watch_record.result.actions.0.logging.logged_text: "value1 value2" }
